crates/ladder_types/tests/ui/generated/should_fail/test__unary_wrapper_ladder__R2_plus_R2.rs

use ladder_types::unary_wrapper_ladder::*;

fn main() {
   let _ = R2::new() + R2::new();
}
