crates/ladder_types/tests/ui/generated/should_fail/test__unary_wrapper_ladder__R2_plus_R2.stderr
error[E0308]: mismatched types
 --> tests/ui/generated/should_fail/test__unary_wrapper_ladder__R2_plus_R2.rs:5:24
  |
5 |    let _ = R2::new() + R2::new();
  |                        ^^^^^^^^^ expected `RelativeTo<()>`, found `()`
  |
  = note: expected struct `RelativeTo<RelativeTo<RelativeTo<RelativeTo<()>>>>`
             found struct `RelativeTo<RelativeTo<RelativeTo<()>>>`
